@@ -4,11 +4,11 @@
 SbuildChroot
 SbuildChrootClass
 SbuildChrootPrintDetailsFunc
-SbuildChrootSetupFunc
 SbuildChrootGetChrootTypeFunc
-SbuildChrootGetSetupNameFunc
 SbuildChrootGetSessionFlagsFunc
 SbuildChrootPrintConfigFunc
+SbuildChrootSetupEnvFunc
+SbuildChrootSetupLockFunc
 SbuildChrootSessionFlags
 SbuildChrootSetupType
 sbuild_chroot_new
@@ -30,10 +30,6 @@ sbuild_chroot_get_run_setup_scripts
 sbuild_chroot_set_run_setup_scripts
 sbuild_chroot_get_run_session_scripts
 sbuild_chroot_set_run_session_scripts
-sbuild_chroot_get_max_users
-sbuild_chroot_set_max_users
-sbuild_chroot_get_current_users
-sbuild_chroot_set_current_users
 sbuild_chroot_get_mount_location
 sbuild_chroot_set_mount_location
 sbuild_chroot_get_mount_device
@@ -41,9 +37,9 @@ sbuild_chroot_set_mount_device
 sbuild_chroot_print_details
 sbuild_chroot_print_config
 sbuild_chroot_get_chroot_type
-sbuild_chroot_get_setup_name
 sbuild_chroot_get_session_flags
-sbuild_chroot_setup
+sbuild_chroot_setup_env
+sbuild_chroot_setup_lock
 <SUBSECTION Standard>
 SBUILD_TYPE_CHROOT_SETUP_TYPE
 sbuild_chroot_setup_type_get_type
@@ -97,6 +93,8 @@ SBUILD_IS_CHROOT_BLOCK_DEVICE_CLASS
 <TITLE>SbuildChrootLvmSnapshot</TITLE>
 SbuildChrootLvmSnapshot
 SbuildChrootLvmSnapshotClass
+sbuild_chroot_lvm_snapshot_get_snapshot_device
+sbuild_chroot_lvm_snapshot_set_snapshot_device
 sbuild_chroot_lvm_snapshot_get_snapshot_options
 sbuild_chroot_lvm_snapshot_set_snapshot_options
 <SUBSECTION Standard>
